@@ -15,9 +15,8 @@ Postgres Install Instructions
 3) as root, su - postgres then run 'createuser' to add your user id
 4) (don't set a password on your postgres db name, yet, gnucash doesn't 
     have a GUI to ask for your password yet)
-5) as yourself (i.e. your unix login), run 'createdb gnucash'
-   
-6) (optional) enable TCPIP connections to remote hosts. To do this:
+
+5) (optional) enable TCPIP connections to remote hosts. To do this:
    edit the file /var/lib/pgsql/pg_hba.conf on the remote host to
    configure and allow access from other hosts.  See 'man pg_hba.conf'
    for details.  Also create users.  Be sure to set a password.
@@ -31,7 +30,6 @@ GnuCash Build Instructions
 Same as usual, but you want to specify the flag '--enable-sql' i.e. 
 ./configure --enable-sql
 and then 'make'.
-
 
 
 How To Use This Thing
@@ -65,6 +63,7 @@ postgres://localhost/dbname?user=whomever&password=asdf
 Note that the username and password are the pg_shadow username and
 password, *NOT* your unix login name and password.
 
+
 Access Modes
 ------------
 There are four different ways or 'modes' in which to access the database.
@@ -81,6 +80,7 @@ Enable these by specifying the URL
 postgres://localhost/dbname?mode=whatever
 
 The current default is single-update, but will soon be multi-user-poll
+
 
 Other Options
 -------------
